--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
             <ul class="social-icon">
-                <li><a href="#" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/Riyazm16" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/riyaj-mulla-284927ab/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.facebook.com/riyaj.mulani.73345" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="https://twitter.com/Riyaj16296" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -448,7 +448,7 @@
 
                 <address>
                     <strong>Email</strong><br>
-                    <a href="mailto:#">riyajmulla16296@gmail.com
+                    <a href="mailto:riyajmulla16296@gmail.com">riyajmulla16296@gmail.com
                 </a>
                 </address>
             </div>
