--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <div class="content-item">
                     <h3>Internet surfing</h3>
 
-                    <p>Tech news | Tech discussions | Hackrang <3 | Code Challanges</p>
+                    <p>Tech news | Tech discussions | Hackrank <3 | Code Challanges</p>
 
                 </div>
                 <div class="content-item">
