--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta name="keywords" content="python developer riyaj mulla , riyaj mulla python developer, riyaj mulla php developer, microservices, AWS, " />
+<meta name="description" content="python developer riyaj mulla , riyaj mulla python developer">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Riyaj Mulla (Software developer)</title>
 
