--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                         <div class="about-text">
                             <p>
                                 Thinking “out of the box” to provide software-based solutions
-                                Strong in design and integration problem-solving skills. Expert in Python, PHP, and
-                                My-SQL with database analysis and design. Skilled in developing business plans,
+                                Strong in design and integration problem-solving skills. Expert in Python,     My-SQL with database analysis and design. Skilled in developing business plans,
                                 requirements specifications, user documentation, and architectural systems research.
                                 Strong written and verbal communications.
                             </p>
@@ -217,8 +216,7 @@
                                     <div class="expertise-item">
                                         <h3>SKILLS</h3>
 
-                                        <p>Python - Django, Flask, NumPy, SQLAlchemy, Django ORM</p>
-                                        <p>PHP - Laravel, CodeIgniter, Smarty, Prestation, Eloquent ORM</p>
+                                        <p>Python - Django, Flask, SQLAlchemy, Django ORM</p>
                                         <p>SQL - MySQL, MS-Silverer, Google BigQuery</p>
                                         <p>AWS</p>
                                         <p>jQuery,Ajax</p>
@@ -333,19 +331,15 @@
                                 <div class="col-md-12">
                                     <div class="expertise-item">
                                         <p>Developing modules for ecommerce platform.</p>
-                                        <p>Code and query optimization for improving application speed and scalability.
-                                        </p>
-                                        <p>Module developments US stock market web app.</p>
-                                        <p>Application Speed Optimization for large modules.</p>
+                                        <p>Module developments US stock market web app -django</p>
+                                        <p>Application Speed Optimization for large modules - django</p>
                                         <p>Python Microservices for share market app based</p>
                                         <p>Python Microservices for the CRM app.</p>
                                         <p>Python Microservices for Document manipulating app.</p>
-                                        <p>Ecommerce site of diamonds.</p>
-                                        <p>An ROI app to keep tracking of agreements and dealerships.</p>
+                                        <p>An ROI app to keep tracking of agreements and dealerships- django</p>
                                         <p>Implemented emotion recognition python app based on TensorFlow.</p>
                                         <p>Worked on google queries.</p>
                                         <p>MS-Excel parsing and generation for dynamic data.</p>
-                                        <p>Image capture and generation with php.</p>
 
                                         <p>Designed and implementation of learning management SaaS Solution.</p>
                                         <p>Worked on various payment gateways and e-commerce modules.</p>
